header spacing fixed

--- a/battleships_game/client/public/css/style.css
+++ b/battleships_game/client/public/css/style.css
@@ -48,7 +48,7 @@ h2 {
 #turn-info, #game-finished {
   position: fixed;
   float: left;
-  top: 0%;
+  top: 20px;
   width: 100%;
   margin: 0%;
 }
